 - Add possibilities to use any number numpy array when assigning matrices and vectors
 - Add possibilities to use any integer numpy array for indices in matrices and vectors
 - Fix for int typemaps in PyDOLFIN
 - Split mult into mult and transpmult
 - Filter out PETSc argument when parsing command-line parameters
 - Extend comments to SWIG interface files
 - Add copyright statements to SWIG interface files (not finished yet)
 - Add typemaps for misc std::vector<types> in PyDOLFIN
 - Remove dependencies on std_vector.i reducing SWIG wrapper code size
 - Use relative %includes in dolfin.i
 - Changed names on SWIG interface files dolfin_foo.i -> foo.i
 - Add function interpolate() in Python interface
 - Fix typmaps for uint in python 2.6
 - Use TypeError instead of ValueError in typechecks in typmaps.i
 - Add in/out shared_ptr<Epetra_FEFoo> typemaps for PyDOLFIN
 - Fix JIT compiling in parallel
 - Add a compile_extension_module function in PyDOLFIN
 - Fix bug in Python vector assignment
 - Add support for compressed base64 encoded VTK files (using zlib)
 - Add support for base64 encoded VTK files
 - Experimental support for parallel assembly and solve
 - Bug fix in project() function, update to UFL syntax
 - Remove disp() functions and replace by info(foo, true)
 - Add fem unit test (Python)
 - Clean up SystemAssembler
 - Enable assemble_system through PyDOLFIN
 - Add 'norm' to GenericMatrix
 - Efficiency improvements in NewtonSolver
 - Rename NewtonSolver::get_iteration() to NewtonSolver::iteration()
 - Improvements to EpetraKrylovSolver::solve
 - Add constructor Vector::Vector(const GenericVector& x)
 - Remove SCons deprecation warnings
 - Memory leak fix in PETScKrylovSolver
 - Rename dolfin_assert -> assert and use C++ version
 - Fix debug/optimise flags
 - Remove AvgMeshSize, InvMeshSize, InvFacetArea from SpecialFunctions
 - Rename MeshSize -> CellSize
 - Rewrite parameter system with improved support for command-line parsing,